# pyproject-udeps

./: CHANGELOG.md  Cargo.toml  Justfile  README.md  bacon.toml  package.json  pnpm-lock.yaml
.changeset/: config.json  fix-aliased-dev-deps.md  fix-crash-hardening.md  fix-no-ignore-flag.md  fluffy-suns-drum.md  fuzzy-years-relax.md  generalize-to-pyproject-udeps.md  modern-pumas-walk.md  pink-cities-flash.md  prebuilt-binaries.md  proud-planets-behave.md  rename-to-pyproject-udeps.md  ruff-parser-accuracy.md  support-uv-and-pep621.md  tidy-badgers-report.md  wise-otters-listen.md
.github/workflows/: audit.yml  binaries.yml  general.yml  release.yml
contrib/: benchmark.vl.json
contrib/aur/pyproject-udeps/: PKGBUILD
contrib/aur/pyproject-udeps-bin/: PKGBUILD
contrib/name-map-audit/: README.md  analyze.py  fetch_modules.py
src/: app.rs  ignorefile.rs  imports.rs  lib.rs  main.rs  matching.rs  name_map.rs  pyproject.rs  testgen.rs  venv.rs
src/infra/: env.rs  fs.rs  mod.rs  process.rs  util.rs
tests/: cli.rs
