[package]
name = "poetry-udeps"
version = "0.2.10"
edition = "2024"
authors = ["Luke Hsiao <luke@hsiao.dev>"]
description = "Find unused dependencies in pyproject.toml"
repository = "https://github.com/lukehsiao/poetry-udeps"
homepage = "https://github.com/lukehsiao/poetry-udeps"
license = "BlueOak-1.0.0"
keywords = ["poetry", "dependencies"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.50", features = ["wrap_help", "derive", "suggestions"] }
clap-verbosity-flag = "3.0.4"
flume = "0.11.1"
ignore = "0.4.24"
log = "0.4.28"
nom = "8.0.0"
pep-508 = "0.4.0"
phf = { version = "0.13.1", features = ["macros"] }
toml = "0.9.8"
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
xshell = "0.2.7"

[dev-dependencies]
pretty_assertions = "1.4.1"

# Keep release binaries small. Fat LTO and single codegen unit cost build
# time, but that only hits CI and `cargo install`.
[profile.release]
strip = true
lto = true
codegen-units = 1

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "{ bin }{ binary-ext }"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.zip"
pkg-fmt = "zip"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.zip"
pkg-fmt = "zip"
