[package]
name = "poetry-udeps"
version = "0.2.11"
edition = "2024"
rust-version = "1.94"
authors = ["Luke Hsiao <luke@hsiao.dev>"]
description = "Renamed to pyproject-udeps. Find unused dependencies in pyproject.toml."
repository = "https://github.com/lukehsiao/pyproject-udeps"
homepage = "https://github.com/lukehsiao/pyproject-udeps"
license = "BlueOak-1.0.0"
keywords = ["poetry", "dependencies"]
categories = ["command-line-utilities"]
include = ["/src/main.rs", "/README.md", "/LICENSE.md", "/CHANGELOG.md"]

# This is the final release of poetry-udeps: a thin wrapper around its
# successor so existing installs keep working while pointing users at the
# new name.
[dependencies]
clap = "4.5"
pyproject-udeps = "0.3.0"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.20", features = ["fmt"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
