[package]
name = "pyproject-udeps"
version = "0.3.2"
edition = "2024"
# ruff_python_parser requires 1.94.
rust-version = "1.94"
authors = ["Luke Hsiao <luke@hsiao.dev>"]
description = "Find unused dependencies in pyproject.toml"
repository = "https://github.com/lukehsiao/pyproject-udeps"
homepage = "https://github.com/lukehsiao/pyproject-udeps"
license = "BlueOak-1.0.0"
keywords = ["python", "pyproject", "poetry", "uv", "dependencies"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["wrap_help", "derive", "suggestions"] }
clap-verbosity-flag = "3.0.4"
flume = "0.12.0"
ignore = "0.4.28"
log = "0.4.33"
phf = { version = "0.14.0", features = ["macros"] }
ruff_python_ast = "=0.0.4"
ruff_python_parser = "=0.0.4"
toml = "1.1.2"
tracing = "0.1.44"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }

[dev-dependencies]
assert_cmd = "2.2.2"
hegeltest = "0.27.0"
pretty_assertions = "1.4.1"
tempfile = "3.27.0"

# Keep release binaries small. Fat LTO and single codegen unit cost build
# time, but that only hits CI and `cargo install`.
[profile.release]
strip = true
lto = true
codegen-units = 1

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "{ bin }{ binary-ext }"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.zip"
pkg-fmt = "zip"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.zip"
pkg-fmt = "zip"
